--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
-    "@gorhom/bottom-sheet": "^4.3.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
@@ -22,6 +21,7 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7"
