--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "12.3.0",
+    "react-native-view-shot": "3.1.2",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
